### Added

- Added a custom item save script, that should always save the items in the state and position they are supposed to be at
- Added compatibility with Advanced Backpack mod

### Changes

- Minor under the hood improvements
- "Shadow Distance" slider won't be displayed, if "Adjust Shadows" toggle is not checked
- Improved the performance of enabling and disabling human NPCs
- Slightly adjusted the distance when the logwalls spawn

### Bug Fixes

- Fixed occassional lag after loading the game, caused by Satsuma rigidbody being enabled when it should not be
- Fixed crashing sounds coming from Satsuma and Jonnez when walking next to them
- Fixed empty plastic cans possibly being unpickable by the player
- Fixed MOP disabling empty items, even when "Disable Empty Items" checkbox was not ticked
- Fixed items despawning too aggressively, if player entered the driving mode and was at home, resulting in items despawing as soon as he entered that mode
- Definitive fix for the umemptying kilju bottles
- Fixed an error while paying for packages containing wheels
- Fixed wheels not spawning when unpacking them
- Fixed pub fighter occasionally despawning while leaving/entering the pub
- Fixed Uncle's ragdoll at the pub causing havoc inside by clipping into pub furnitures